# code_Graph_Patition_Solver

./: CMakeLists.txt  README.md
Result/: 144.graph.part.4  4elt.graph.part.12  4elt.graph.part.4  4elt.graph.part.6  4elt_12part_1e-9_10iter_5cons_search  4elt_6part_1e-11_10iter_15cons_search_O3  add20.graph.part.4  add20.graph.part.6  add20_4part_1e-11_10iter_15cons_search_O3  add20_4part_1e-13_10iter_15cons_search_O3  bcsstk32.graph.part.12  bcsstk32_12part_1e-11_10iter_5cons_search  crack.graph.part.12  crack.graph.part.6  crack_12part_1e-11_10iter_5cons_search  crack_6part_1e-11_10iter_15cons_search_O3  crack_6part_1e-11_10iter_5cons_search  fe_4elt2.graph.part.12  fe_4elt2.graph.part.2  fe_4elt2.graph.part.4  fe_4elt2.graph.part.6  fe_4elt2_2part_1e-11_10iter_15cons_search_O3_scale  result.txt  whitaker3.graph.part.12  whitaker3.graph.part.6  whitaker3_12part_1e-11_10iter_5cons_search  whitaker3_6part_1e-11_10iter_10cons_search_O3  whitaker3_6part_1e-11_10iter_15cons_search_O3  whitaker3_6part_1e-11_10iter_5cons_search  whitaker3_6part_1e-9_10iter_5cons_search_O3  wing.graph.part.4  wing.graph.part.6  wing_4part_1e-11_10iter_15cons_search_O3  wing_4part_1e-13_10iter_15cons_search_O3
Trash/: Makefile
Trash/recover/: buddleFosC.h
Trash/testFunction/: testTaskFlow.cpp
benchmark/: simple.graph
include/: CsrMatrix.h  GraphParser.h  LinearSolver.h  buddleFosC.h
include/eigen/bulid_dir/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Eigen3Targets.cmake  Makefile  buildtests.sh  cdashtesting.cmake  cmake_install.cmake
include/eigen/bulid_dir/Eigen/: Makefile  cmake_install.cmake
include/eigen/bulid_dir/bench/spbench/: CTestTestfile.cmake  Makefile  cmake_install.cmake
include/eigen/bulid_dir/blas/: CTestTestfile.cmake  Makefile  cmake_install.cmake
include/eigen/bulid_dir/blas/testing/: CTestTestfile.cmake  Makefile  cmake_install.cmake
include/eigen/bulid_dir/demos/: CTestTestfile.cmake  Makefile  cmake_install.cmake
include/eigen/bulid_dir/doc/: Doxyfile  Doxyfile-unsupported  Makefile  cmake_install.cmake
include/eigen/bulid_dir/doc/examples/: Makefile  cmake_install.cmake
include/eigen/bulid_dir/doc/snippets/: Makefile  cmake_install.cmake
include/eigen/bulid_dir/doc/special_examples/: Makefile  cmake_install.cmake
include/eigen/bulid_dir/language_tests/Fortran/: CMakeCache.txt  Makefile  (+1 more)
include/eigen/bulid_dir/lapack/: CTestTestfile.cmake  Makefile  cmake_install.cmake
include/eigen/bulid_dir/scripts/: CTestTestfile.cmake  Makefile  cmake_install.cmake
include/eigen/bulid_dir/test/: CTestTestfile.cmake  Makefile  cmake_install.cmake
include/eigen/bulid_dir/unsupported/: CTestTestfile.cmake  Makefile  cmake_install.cmake
include/taskflow/core/: executor.hpp  notifier.hpp  observer.hpp  spmc_queue.hpp
include/taskflow/utility/: traits.hpp
src/: .buddleFosC.h.swp  CsrMatrix.h  CsrMatrix2.h  GraphParser.h  LinearSolver.h  Vector.h  buddleFosC.h  main.cpp  operator.h  profile.txt  testCsrMatrix2.cpp  testLinearSolver.cpp  try.cpp
src2/: LinearSolver.h  buddleFosC.h  checkPerformance.cpp  define.h  main.cpp  operator.h  testFunction.cpp
unittest/: testCsrMatrix.cpp  testCsrMatrix2.cpp  testVector.cpp
(+18 files in other folders)
